[PAY-369][PAY-349][PAY-331][PAY-376][PAY-389][PAY-219] Fix more tipping QA issues (#1514)
* Update tip input type

* Fix notification text wrap

* Increase margin besides go back button label

* Only show confirm info when no error, not sending, not converting

* Fix weird UI layout issue when converting eth<>spl audio during tipping

* Make disabled confirm & try again button same width as non-disabled version

* Give active states to profile links

* Center vertically feed tip button text

* Make closing tip audio modal tip screens consistent

* Update confirm button style

* Do not perform active animation if confirm button is disabled

--- a/audius-client/packages/web/src/components/tipping/tip-audio/TipAudio.module.css
+++ b/audius-client/packages/web/src/components/tipping/tip-audio/TipAudio.module.css
@@ -241,7 +241,7 @@
   cursor: pointer;
 }
 .goBack {
-  margin-left: 4px;
+  margin-left: 8px;
   font-weight: var(--font-bold);
   font-size: var(--font-l);
   color: var(--neutral-light-4);
@@ -255,9 +255,6 @@
 
 .disabled {
   cursor: unset;
-}
-.confirmButton.disabled {
-  width: 186px;
 }
 
 .loadingSpinner {
@@ -347,10 +344,13 @@
   color: var(--accent-red);
 }
 
+.confirmButton {
+  width: 252px;
+}
 .button:hover {
   background: var(--primary-light-1) !important;
 }
-.button:active {
+.button:not(.disabled):active {
   background: var(--primary-dark-1) !important;
   transform: perspective(1px) scale3d(0.99, 0.99, 0.99);
 }
